user profile dark layout

--- a/html/template/todo.html
+++ b/html/template/todo.html
@@ -1211,10 +1211,10 @@
                             <div class="badge badge-sm capitalize px-3 font-bold rounded-full text-primary bg-primary-extralight priority-medium !text-3xs">medium</div>
                           </li>
                           <li class="cursor-pointer"> 
-                            <div class="badge badge-sm capitalize px-3 font-bold rounded-full text-success bg-success-light status-inprogress !text-3xs">inprogress</div>
+                            <div class="dark:bg-sidebar-dark2 badge badge-sm capitalize px-3 font-bold rounded-full text-success bg-success-light status-inprogress !text-3xs">inprogress</div>
                           </li>
-                          <li class="cursor-pointer"> <i class="transition-all stroke-twitter opacity-50 hover:opacity-100 w-[calc(16px_+_(18_-_16)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(16px_+_(18_-_16)_*_((100vw_-_320px)_/_(1920_-_320)))] edit" data-feather="edit"></i></li>
-                          <li class="cursor-pointer"> <i class="transition-all stroke-danger opacity-50 hover:opacity-100 w-[calc(16px_+_(18_-_16)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(16px_+_(18_-_16)_*_((100vw_-_320px)_/_(1920_-_320)))] delete" data-feather="trash"></i></li>
+                          <li class="cursor-pointer"><i class="transition-all stroke-twitter opacity-50 hover:opacity-100 w-[calc(16px_+_(18_-_16)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(16px_+_(18_-_16)_*_((100vw_-_320px)_/_(1920_-_320)))] edit" data-feather="edit"></i></li>
+                          <li class="cursor-pointer"><i class="transition-all stroke-danger opacity-50 hover:opacity-100 w-[calc(16px_+_(18_-_16)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(16px_+_(18_-_16)_*_((100vw_-_320px)_/_(1920_-_320)))] delete" data-feather="trash"></i></li>
                         </ul>
                       </div>
                     </li>
@@ -1235,10 +1235,10 @@
                             <div class="badge badge-sm capitalize px-3 font-bold rounded-full text-primary bg-primary-extralight priority-medium !text-3xs">medium</div>
                           </li>
                           <li class="cursor-pointer"> 
-                            <div class="badge badge-sm capitalize px-3 font-bold rounded-full text-success bg-success-light status-completed !text-3xs">completed</div>
+                            <div class="dark:bg-sidebar-dark2 badge badge-sm capitalize px-3 font-bold rounded-full text-success bg-success-light status-completed !text-3xs">completed</div>
                           </li>
-                          <li class="cursor-pointer"> <i class="transition-all stroke-twitter opacity-50 hover:opacity-100 w-[calc(16px_+_(18_-_16)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(16px_+_(18_-_16)_*_((100vw_-_320px)_/_(1920_-_320)))] edit" data-feather="edit"></i></li>
-                          <li class="cursor-pointer"> <i class="transition-all stroke-danger opacity-50 hover:opacity-100 w-[calc(16px_+_(18_-_16)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(16px_+_(18_-_16)_*_((100vw_-_320px)_/_(1920_-_320)))] delete" data-feather="trash"></i></li>
+                          <li class="cursor-pointer"><i class="transition-all stroke-twitter opacity-50 hover:opacity-100 w-[calc(16px_+_(18_-_16)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(16px_+_(18_-_16)_*_((100vw_-_320px)_/_(1920_-_320)))] edit" data-feather="edit"></i></li>
+                          <li class="cursor-pointer"><i class="transition-all stroke-danger opacity-50 hover:opacity-100 w-[calc(16px_+_(18_-_16)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(16px_+_(18_-_16)_*_((100vw_-_320px)_/_(1920_-_320)))] delete" data-feather="trash"></i></li>
                         </ul>
                       </div>
                     </li>
@@ -1259,10 +1259,10 @@
                             <div class="badge badge-sm capitalize px-3 font-bold rounded-full text-primary bg-primary-extralight priority-low !text-3xs">low</div>
                           </li>
                           <li class="cursor-pointer"> 
-                            <div class="badge badge-sm capitalize px-3 font-bold rounded-full text-success bg-success-light status-pending !text-3xs">pending</div>
+                            <div class="dark:bg-sidebar-dark2 badge badge-sm capitalize px-3 font-bold rounded-full text-success bg-success-light status-pending !text-3xs">pending</div>
                           </li>
-                          <li class="cursor-pointer"> <i class="transition-all stroke-twitter opacity-50 hover:opacity-100 w-[calc(16px_+_(18_-_16)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(16px_+_(18_-_16)_*_((100vw_-_320px)_/_(1920_-_320)))] edit" data-feather="edit"></i></li>
-                          <li class="cursor-pointer"> <i class="transition-all stroke-danger opacity-50 hover:opacity-100 w-[calc(16px_+_(18_-_16)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(16px_+_(18_-_16)_*_((100vw_-_320px)_/_(1920_-_320)))] delete" data-feather="trash"></i></li>
+                          <li class="cursor-pointer"><i class="transition-all stroke-twitter opacity-50 hover:opacity-100 w-[calc(16px_+_(18_-_16)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(16px_+_(18_-_16)_*_((100vw_-_320px)_/_(1920_-_320)))] edit" data-feather="edit"></i></li>
+                          <li class="cursor-pointer"><i class="transition-all stroke-danger opacity-50 hover:opacity-100 w-[calc(16px_+_(18_-_16)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(16px_+_(18_-_16)_*_((100vw_-_320px)_/_(1920_-_320)))] delete" data-feather="trash"></i></li>
                         </ul>
                       </div>
                     </li>
